--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.4.7
+
+
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/photos/
-    - assets/icons/
+         - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
