--- a/taskify/android/app/src/main/AndroidManifest.xml
+++ b/taskify/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.taskify">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="taskify"
         android:name="${applicationName}"
