--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.4.7
+  firebase_auth: ^3.8.0
+  firebase_messaging: ^13.0.1
+  flutter_local_notifications: ^9.9.1
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+
+    - assets/
+ 
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
