--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^3.4.7
   flutter_cupertino_datetime_picker: ^3.0.0
   intl: ^0.17.0
+  cool_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
