--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_cupertino_datetime_picker: ^3.0.0
   intl: ^0.17.0
   cool_alert: ^1.1.0
+  get: ^4.6.5
+  curved_nav_bar: ^0.0.2
+  table_calendar: ^3.0.7
+  firebase_auth: ^3.3.14
+  dropdown_button2: ^1.8.0
 
 dev_dependencies:
   flutter_test:
