--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.3
   firebase_core: ^1.22.0
   cloud_firestore: ^3.4.7
   firebase_auth: ^3.8.0
@@ -67,6 +68,8 @@ flutter:
   assets:
 
     - assets/
+    - assets/images/login.jpeg
+    - assets/images/login.png
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
