--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   line_awesome_flutter: ^1.0.1
   flutter_screenutil: ^1.0.2
   animated_theme_switcher: ^1.0.5
+  cool_alert: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
