--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -33,12 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  line_awesome_flutter: ^2.0.0
+  flutter_screenutil: ^1.0.2
+  animated_theme_switcher: ^1.0.5
+  cool_alert: ^1.1.0
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   firebase_core: ^1.22.0
   cloud_firestore: ^3.4.7
   curved_nav_bar: ^0.0.2
   table_calendar: ^3.0.7
+  firebase_auth: ^3.8.0
 
 dev_dependencies:
   flutter_test:
