--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   calendar_date_picker2: ^0.2.4
   provider:
   flutter_typeahead: ^4.1.1
+  flutter_local_notifications: ^11.0.1
+  timezone: ^0.9.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
