--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   rxdart: ^0.27.5
   timezone: ^0.8.0
   flutter_local_notifications: ^9.6.0
+  http:
 
 dev_dependencies:
   flutter_test:
