--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   googleapis_auth: ^1.3.1
   googleapis: ^9.2.0
   url_launcher: ^6.1.5
+  flutter_local_notifications: ^10.0.0
+  http:
 
 dev_dependencies:
   flutter_test:
