--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_local_notifications: ^10.0.0
   http:
   rxdart: ^0.27.5
+  firebase_storage: ^10.2.13
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
