--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   flutter_local_notifications: ^10.0.0
   http:
   rxdart: ^0.27.5
+  firebase_storage: "^10.0.2"
+  image_picker: ^0.8.6
+  permission_handler: ^10.1.0
 
 dev_dependencies:
   flutter_test:
