--- a/taskify/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/taskify/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/raghad/Development/flutter
-FLUTTER_APPLICATION_PATH=/Users/raghad/Desktop/Taskify/taskify
+FLUTTER_ROOT=/Applications/taskify 100/flutter
+FLUTTER_APPLICATION_PATH=/Applications/taskify 100/Taskify/taskify
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
