--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   firebase_storage: "^10.0.2"
   image_picker: ^0.8.6
   permission_handler: ^10.1.0
+  cron:
+  awesome_notifications: ^0.7.4
 
 dev_dependencies:
   flutter_test:
