--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   firebase_storage: "^10.0.2"
   image_picker: ^0.8.6
   permission_handler: ^10.1.0
+  sliding_sheet: ^0.5.2
 
 dev_dependencies:
   flutter_test:
