--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   permission_handler: ^10.1.0
   cron:
   awesome_notifications: ^0.7.4
+  awesome_notifications_fcm: ^0.7.4
   workmanager: ^0.5.1
 
 dev_dependencies:
