--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -78,7 +78,7 @@ dev_dependencies:
 flutter_icons:
   ios: true
   android: true
-  image_path_ios: "assets/logoIOS.JPEG"
+  image_path_ios: "assets/logo.png"
   image_path_android: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
