--- a/taskify/pubspec.yaml
+++ b/taskify/pubspec.yaml
@@ -66,7 +66,12 @@ dependencies:
   awesome_notifications: ^0.7.0
   awesome_notifications_fcm: ^0.7.0
   workmanager: ^0.5.1
-
+  uuid: ^3.0.6
+  share_plus: ^6.1.0
+  path_provider:
+  file_picker:
+  firebase_database:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
